# joetheismansleg.github.io

./: .gitignore  CNAME  MODERNIZATION.md  MODERNIZATION_COMPLETE.md  README.md  _config.yml  generate_matchup_table.py  generate_site.py  generate_site_v2.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
brackets/: consolation_bracket_empty.ai  playoff_bracket_empty.ai
data/: postseason_matchups.json
src/joetheismannsleg/: __init__.py  __main__.py  cli.py  config.py  divisions.py  exceptions.py  models.py
src/joetheismannsleg/calculations/: __init__.py  stats.py
src/joetheismannsleg/data/: __init__.py  client.py  league.py  postseason_matchups.json
src/joetheismannsleg/ui/: __init__.py  html.py
src/sleeper_league/: __init__.py  __main__.py  cache.py  cli.py  client.py  config.py  exceptions.py  html.py  html_v2.py  league.py  models.py  stats.py  stats_v2.py
src/sleeper_league/calculations/: stats.py
src/sleeper_league/data/: __init__.py  client.py  league.py
src/sleeper_league/ui/: html.py
tests/: __init__.py  test_json_serialization.py  test_tiebreakers.py  test_year_filtering.py
